Added Docker require message. Getting ready for beta release

--- a/src/assets/stylesheets/styles.css
+++ b/src/assets/stylesheets/styles.css
@@ -63,6 +63,11 @@ div.body {
 
 .tile a {
 	text-decoration: none;
+	color: var(--active);
+}
+
+.tile a.underline:hover {
+	text-decoration: underline;
 }
 
 .tile h1 {
